@@ -1,3 +1,8 @@
+2008-02-08  Danny Smith  <dannysmith@users.sourceforge.net>
+	* mingwex/gdtoa/gdtoaimp.h (USE_LOCALE): Define.
+	* mingwex/gdtoa/mingw_snprintf.c: [USE_LOCALE] Include locale.h.
+	(x_sprintf): [USE_LOCALE] Use  *localeconv()->decimal_point.
+
 2008-02-28  Joseph Myers  <joseph@codesourcery.com>
 
 	* include/complex.h: Don't condition contents on C99 or not
